fixed some spacing issues

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 700px;
+  height: 750px;
   width: 100%;
   display: flex;
   flex-direction: column;
