--- a/src/pages/teamPage/teamPage.scss
+++ b/src/pages/teamPage/teamPage.scss
@@ -1,5 +1,6 @@
-.refresh {
+.teampage {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding: 0px 5px;
 }
